--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GSAP Animation</title>
+    <title>transition landing page</title>
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/shery.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="main">
-        <div id="back"></div>
+        <div id="back">
+            <img src="IMG_7564.JPG" alt="image1">
+            <img src="IMG_7565.JPG" alt="image2">
+            <img src="IMG_7566.JPG" alt="image3">
+            <img src="IMG_7567.JPG" alt="image4">
+            <img src="IMG_7568.JPG" alt="image5">
+        </div>
         <div id="top">
             <div id="workarea">
                 <div id="nav">
@@ -25,24 +33,24 @@
                     <div id="heroleft">
                         <div class="elem">
                             <h1>david chang</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
+                            <h1>susan lopez</h1>
+                            <h1>olivia wilson's</h1>
+                            <h1>daniel lee</h1>
+                            <h1>liam miller's</h1>
                         </div>
                         <div class="elem">
                             <h1>gives zero</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
+                            <h1>indifference is</h1>
+                            <h1>apathy is</h1>
+                            <h1>feels</h1>
+                            <h1>boredom is</h1>
                         </div>
                         <div class="elem">
                             <h1>funks.</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
-                            <h1>david chang</h1>
+                            <h1>absolute.</h1>
+                            <h1>total.</h1>
+                            <h1>nothing.</h1>
+                            <h1>max.</h1>
                         </div>
                         <button>Explore Now</button>
                     </div>
@@ -58,5 +66,13 @@
             </div>
         </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/sheryjs/dist/shery.js"></script>
+    <script src="script.js"></script>
+    
 </body>
 </html>
